[gd_scene load_steps=3 format=3 uid="uid://c8vph2ifmury7"]

[ext_resource type="Script" uid="uid://cor5epa2ohus1" path="res://addons/diisis/editor/src/windows/handler_window.gd" id="1_6ygk2"]
[ext_resource type="PackedScene" uid="uid://7os6why715o8" path="res://addons/diisis/editor/src/handler_setup_container.tscn" id="2_6c5k8"]

[node name="HandlerWindow" type="Window"]
script = ExtResource("1_6ygk2")

[node name="HandlerSetupContainer" parent="." instance=ExtResource("2_6c5k8")]

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
